# todo-list-app

./: .gitignore  pyproject.toml
.github/workflows/: terraform.yml
app/: __init__.py  database.py  main.py
app/auth/: routes.py
app/middle/: auth.py
app/models/: todo.py  user.py
app/routes/todo/: routes.py
app/services/: todo_service.py
app/utils/: jwt_helper.py
infra/prd/: cognito.tf  iam.tf  main.tf  outputs.tf  sg.tf  terraform.tfvars  variables.tf  vpc.tf
infra/todo-list-app/prd/: cognito.tf  dynamodb.tf  iam.tf
tests/: conftest.py  test_auth.py  test_todo.py
