[project]
name = "todo-list-app"
version = "0.1.0"
description = ""
authors = [
    {name = "“ShomaKobayashi”",email = "“shoma.kobayashi@slabcorp.co.jp”"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
