[project]
name = "todo-list-app"
version = "0.1.0"
description = ""
authors = [
    {name = "“shomakobayashi”",email = "“shoma.k.8008@ymail.ne.jp”"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "boto3 (>=1.35.98,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

